# TRPG-World

./: .env.example  .gitignore  ACT_DIRECTOR_TODO.md  AGENTS.md  README.ko.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  ruff.toml  test_new_service.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_is_active_to_game_sessions.py  003_add_action_judgments.py  004_add_session_participants_index.py  005_add_3phase_process_fields.py  006_fix_action_judgments_nullable.py  007_add_story_acts_and_growth.py  008_add_character_share_codes.py  009_add_event_probability.py  010_add_judgments_data_to_story_logs.py  (+10 more)
backend/app/: AGENTS.md  __init__.py  config.py  database.py  main.py  models.py  schemas.py  socket_server.py
backend/scripts/: add_participant.py  diagnose_ai_issue.py  migrate_passwords.py  reset_characters.py  reset_sessions.py  seed_users.py
backend/tests/: AGENTS.md  __init__.py  test_act_analysis_node.py  test_ai_service_v2.py  test_background_task_manager.py  test_character_generation_service.py  test_character_state.py  test_config.py  test_context_loader.py  test_context_loader_ability_fix.py  test_dice_system.py  test_image_generation_service.py  test_judgment_node.py  test_narrative_node.py  test_participant_management.py  test_routes_characters.py  test_routes_sessions.py  test_session_image_concept_service.py  test_session_state_manager.py  test_socket_refactoring.py  test_story_director.py  test_stream_buffer.py
(+183 files in other folders)
